// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render CardInCart should CardInCart render with custom props 1`] = `
<DocumentFragment>
  <div
    class="cardWrapper"
  >
    <img
      alt="test"
      src="img"
    />
    <div
      class="cardName"
    >
      <h3>
        test
      </h3>
    </div>
    <div
      class="cardCode"
    >
      Vendor code: 1234
    </div>
    <div
      class="cardCode"
    >
      Color: 
      <button
        class="cardBtnColor"
        style="background-color: red;"
      />
    </div>
    <div
      class="cardPrice"
    >
      <p>
        <b>
          $12345
        </b>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render CardInCart should CardInCart render with default props 1`] = `
<DocumentFragment>
  <div
    class="cardWrapper"
  >
    <img
      alt="test"
      src="img"
    />
    <div
      class="cardName"
    >
      <h3>
        test
      </h3>
    </div>
    <div
      class="cardCode"
    >
      Vendor code: 1234
    </div>
    <div
      class="cardCode"
    >
      Color: 
      <button
        class="cardBtnColor"
        style="background-color: grey;"
      />
    </div>
    <div
      class="cardPrice"
    >
      <p>
        <b>
          $12345
        </b>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
